bin_PROGRAMS = DL6-OxygenFight
EXTRA_DIST = \
    0.jpg \
    1.jpg \
    2.jpg \
    3.jpg \
    bg.png \
    bgm.ogg \
    data.py \
    font.ttf \
    home.png \
    main.py \
    title.png \
    仓院之壶.png \
    勾玉.png \
    复仇.png \
    大将军长枪.png \
    导弹.png \
    小刀.png \
    小百合.png \
    尸检报告.png \
    异议.ogg \
    异议.png \
    律师徽章.png \
    御剑信.png \
    心灵枷锁.png \
    思考者.png \
    手枪.png